--- a/assets/styles/global/breakpoints.scss
+++ b/assets/styles/global/breakpoints.scss
@@ -1,34 +1,34 @@
 
 @mixin sm {
-  @media (min-width: #{$screen-sm-min}) {
+  @media (max-width: #{$screen-sm-min}) {
     @content;
   }
 }
 
 // Medium devices
 @mixin md {
-  @media (min-width: #{$screen-md-min}) {
+  @media (max-width: #{$screen-md-min}) {
     @content;
   }
 }
 
 // Large devices
 @mixin lg {
-  @media (min-width: #{$screen-lg-min}) {
+  @media (max-width: #{$screen-lg-min}) {
     @content;
   }
 }
 
 // Extra large devices
 @mixin xl {
-  @media (min-width: #{$screen-xl-min}) {
+  @media (max-width: #{$screen-xl-min}) {
     @content;
   }
 }
 
 // Custom breakpoint
 @mixin rwd($screen) {
-  @media (min-width: $screen+'px') {
+  @media (max-width: $screen+'px') {
     @content;
   }
 }
